WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106777
Web Inspector: [Qt] Regression: the script option 'always enable' doesn't persist
https://bugs.webkit.org/show_bug.cgi?id=106777
Summary
Web Inspector: [Qt] Regression: the script option 'always enable' doesn't per...
mipohjan
Reported
2013-01-14 03:15:20 PST
In Qt 4.7 if one set the 'always enable' option, the registry keys were created and stored on Windows, but after upgrading to Qt 4.8 the keys don't get created or read anymore. The javaScript code is in qt/src/3rdparty/webkit/Source/WebCore/inspector/front-end (for Qt 4.8) and the old code (from Qt 4.7) qt/src/3rdparty/webkit/WebCore/inspector/InspectorController.cpp The attached application can be used to reproduce the problem.
Attachments
test application
(3.50 KB, application/zip)
2013-01-14 03:16 PST
,
mipohjan
no flags
Details
Patch
(2.11 KB, patch)
2013-01-17 08:31 PST
,
Jocelyn Turcotte
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mipohjan
Comment 1
2013-01-14 03:16:24 PST
Created
attachment 182538
[details]
test application
Jocelyn Turcotte
Comment 2
2013-01-17 08:31:15 PST
Created
attachment 183194
[details]
Patch Looked at it and it seems that the settings are persisted differently since
http://trac.webkit.org/changeset/76770
An application should call: QWebSettings::globalSettings()->setLocalStoragePath([PATH]); QWebSettings::globalSettings()->setAttribute(QWebSettings::LocalStorageEnabled, true); Or: QWebSettings::enablePersistentStorage(); to enable those settings to work in the application. The patch updates the documentation.
WebKit Review Bot
Comment 3
2013-01-21 05:41:34 PST
Comment on
attachment 183194
[details]
Patch Clearing flags on attachment: 183194 Committed
r140326
: <
http://trac.webkit.org/changeset/140326
>
WebKit Review Bot
Comment 4
2013-01-21 05:41:37 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug