[Qt] Update the documentation about the storage of inspector settings https://bugs.webkit.org/show_bug.cgi?id=106777

Reviewed by Allan Sandfeld Jensen.

Since r76770, QSettings isn't queried anymore to persist inspector
settings like whether or not the debugger is enabled by default.
It still seems to be used for the default attach height.

Update the documentation accordingly.

* WidgetApi/qwebinspector.cpp:


Canonical link: https://commits.webkit.org/125679@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140326 268f45cc-cd09-0410-ab3c-d52691b4dbfc